# Sepsis

./: .gitattributes  .gitignore  Dockerfile  README.md  __init__.py  backend_api.py  h  inference.py  openenv.yaml  pyproject.toml  requirements.txt
scenarios/: early_sepsis.json  septic_shock.json  severe_sepsis.json
server/: app.py
