[project]
name = "sepsis-management-openenv"
version = "1.2.0"
description = "AI-powered sepsis simulation engine with step-by-step clinical decision-making"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.95.2",
    "uvicorn==0.22.0",
    "pydantic==1.10.13",
    "requests==2.32.5",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
